페이징처리

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -15,7 +15,7 @@
         <th>hits</th>
     </tr>
     <tr th:each="board: ${boardList}">
-<!--        변수 : 매개변수 꼴-->
+<!--        변수(html에서 쓸 정보) : 매개변수 꼴(가지고 와야하는 정보)-->
         <td th:text="${board.id}"></td>
         <td><a th:href="@{|/board/${board.id}|}" th:text="${board.boardTitle}"></a></td>
         <td><a th:href="@{/board/${board.id}}" th:text="${board.boardTitle}"></a></td>
