--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -7,13 +7,15 @@
 <body>
 
 <!--action속성: 목적지(서버주소), method속성: http request method(get,post) get으로 보내면 주소창에 보이고 post는 안보인다.-->
-    <form action="/board/save" method="post">
+<!--enctype를 지정해줘야만 파일이 넘어감 그렇지 않으면 파일의 이름같은것들이 넘어간다.-->
+    <form action="/board/save" method="post" enctype="multipart/form-data">
         writer: <input type="text" name="boardWriter"> <br>
 <!--        name이 정해져있어야 정해진 이름으로 담겨져 서버쪽으로 간다-->
         pass: <input type="text" name="boardPass"> <br>
         title: <input type="text" name="boardTitle"> <br>
         contents: <textarea type="text" name="boardContents" cols="30" rows="10"></textarea> <br>
 <!-- textarea는 좀더 넓다.-->
+        file: <input type="file" name="boardFile" multiple> <br>
         <input type="submit" value="글작성">
 
     </form>
